# cameraManager

./: CMakeLists.txt
include/: class_camera.h  class_camera_manager.h
src/: class_camera_manager.cpp  main.cpp
